--- a/Snake.html
+++ b/Snake.html
@@ -154,4 +154,5 @@
 		<h1>HTML5 SNAKE</h1>
 	</body>
 </html>
-<nav><a href="https://workspace-kingkhi.c9users.io/.c9/DBZ.2.html" class="link">Go back<a></nav>
+<nav><a href="https:/
+DBZ.2.html" class="link">Go back<a></nav>
