--- a/dbz.1.html
+++ b/dbz.1.html
@@ -11,9 +11,9 @@
        
     </head>
     <body> 
-  <header><button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.3.html" class="link">About me</a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.2.html" class="link">Fun<a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.html" class="link">Home<a></nav></button></header>
+  <header><button><nav><a href="dbz.3.html" class="link">About me</a></nav></button>
+    <button><nav><a href="dbz.2.html" class="link">Fun<a></nav></button>
+    <button><nav><a href="index.html" class="link">Home<a></nav></button></header>
   
         <br /> <a href="https://fontmeme.com/dragon-ball-z-font/"><img src="https://fontmeme.com/permalink/180315/ad581309fd050ca01337a3daa6483a71.png" alt="dragon-ball-z-font" border="0"></a>
          <header>Progams I got Got into </header>
