--- a/dbz.4.html
+++ b/dbz.4.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Poiret+One">
         <link rel="stylesheet" href= "Grid.css" type="text/css"/>
-    <header><button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.3.html" class="link">About me</a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.2.html" class="link">Fun<a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.1.html" class="link">Resume<a></nav></header></button>
+    <header><button><nav><a href="dbz.3.html" class="link">About me</a></nav></button>
+    <button><nav><a href="dbz.2.html" class="link">Fun<a></nav></button>
+    <button><nav><a href="dbz.1.html" class="link">Resume<a></nav></header></button>
 <div class="grid-container">
 <div class="row"> 
   <div class="column">
