--- a/dbz.3.html
+++ b/dbz.3.html
@@ -14,9 +14,9 @@
     <body>
     <head>
         
-       <header><button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.html" class="link">Home</a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.2.html" class="link">Fun<a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.1.html" class="link">Resume<a></nav></button></header>
+       <header><button><nav><a href="index.html" class="link">Home</a></nav></button>
+    <button><nav><a href="dbz.2.html" class="link">Fun<a></nav></button>
+    <button><nav><a href="bz.1.html" class="link">Resume<a></nav></button></header>
     
 </form>
     <h><a href="https://fontmeme.com/dragon-ball-z-font/"><img src="https://fontmeme.com/permalink/180222/ab058663a822e6160767cb9700a62c82.png" alt="dragon-ball-z-font" border="0"></a></a></h1
