--- a/dbz.2.html
+++ b/dbz.2.html
@@ -8,10 +8,10 @@
         <title>Fun</title>
     </head>
     <body>
-        <header><button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.html" class="link">Home</a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.3.html" class="link">About  Me<a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.1.html" class="link">Resume<a></nav></button></header>
-<button><nav><a href="https://dbz2-kingkhi.c9users.io/Snake.html" class="link">Snake<a></nav></button></header>
+        <header><button><nav><a href="index.html" class="link">Home</a></nav></button>
+    <button><nav><a href="dbz.3.html" class="link">About  Me<a></nav></button>
+    <button><nav><a href="dbz.1.html" class="link">Resume<a></nav></button></header>
+<button><nav><a href="Snake.html" class="link">Snake<a></nav></button></header>
   <center> <a href="https://fontmeme.com/dragon-ball-z-font/"><img src="https://fontmeme.com/permalink/180308/eb169c8f2d8bac1a9f848275fc601ec9.png" alt="dragon-ball-z-font" border="0"></a></center>
  <img src=" http://assets2.ignimgs.com/2016/03/11/dbz1280jpg-0d875e_1280w.jpg"  width="500" height="377"><p>This is a picture of one of favorite</p>
        <p>What I do for is play video gamers watch Youtube/Hulu/Netflix  </p>
