--- a/Snake.html
+++ b/Snake.html
@@ -154,5 +154,4 @@
 		<h1>HTML5 SNAKE</h1>
 	</body>
 </html>
-<nav><a href="https:/
-DBZ.2.html" class="link">Go back<a></nav>
+dbz.2.html" class="link">Go back<a></nav>
