--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Poiret+One">
         <link rel="stylesheet" href= "Grid.css" type="text/css"/>
-    <header><button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.3.html" class="link">About me</a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.2.html" class="link">Fun<a></nav></button>
-    <button><nav><a href="https://dbz2-kingkhi.c9users.io/dbz.1.html" class="link">Resume<a></nav></header></button>
+    <header><button><nav><a href="dbz.3.html" class="link">About me</a></nav></button>
+    <button><nav><a href="dbz.2.html" class="link">Fun<a></nav></button>
+    <button><nav><a href="dbz.1.html" class="link">Resume<a></nav></header></button>
 <div class="grid-container">
     <body><img src="https://mail.google.com/mail/u/0/?ui=2&ik=5fee061f08&view=att&th=1624eb38385f6fd4&attid=0.4&disp=safe&realattid=1624eb1013918dfc0962&zw" alt= width="300" height="200">
 <img src="https://mail.google.com/mail/u/0/?ui=2&amp;ik=5fee061f08&amp;view=att&amp;th=16244a36b44155dc&amp;attid=0.1&amp;disp=safe&amp;realattid=1595481496062263296-local0&amp;zw" a="" width="300" height="200">
