--- a/dbz.2.html
+++ b/dbz.2.html
@@ -14,5 +14,11 @@
 <button><nav><a href="Snake.html" class="link">Snake<a></nav></button></header>
   <center> <a href="https://fontmeme.com/dragon-ball-z-font/"><img src="https://fontmeme.com/permalink/180308/eb169c8f2d8bac1a9f848275fc601ec9.png" alt="dragon-ball-z-font" border="0"></a></center>
  <img src=" http://assets2.ignimgs.com/2016/03/11/dbz1280jpg-0d875e_1280w.jpg"  width="500" height="377"><p>This is a picture of one of favorite</p>
-       <p>What I do for is play video gamers watch Youtube/Hulu/Netflix  </p>
+       <p>What I do for is play video gamers watch Youtube/Hulu/Netflix  </p<head>
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <!-- or -->
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+</head>
 <body>
